# azino

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  run_all_tests.sh
.github/workflows/: build.yml
client/: CMakeLists.txt
example/client/: CMakeLists.txt  main.cpp
example/echo_c++/: CMakeLists.txt  client.cpp  server.cpp
include/azino/: client.h  kv.h  options.h  status.h
sdk/: CMakeLists.txt
sdk/include/: txopslog.h  txwritebuffer.h
sdk/src/: client.cpp
service/: kv.proto  tx.proto
service/storage/: storage.proto
service/txindex/: txindex.proto
service/txplanner/: txplanner.proto
storage/: CMakeLists.txt  main.cpp
storage/include/: db.h  service.h  status.h  storage.h  utils.h
storage/leveldb/: dbimpl.cpp
storage/server/: main.cpp
storage/service/: storageserviceimpl.cpp
storage/src/: utils.cpp
storage/test/: test_dbimpl.cpp
txindex/: CMakeLists.txt  main.cpp
txindex/include/: index.h  persistor.h  service.h
txindex/persistor/: persistor.cpp
txindex/server/: main.cpp
txindex/service/: txopserviceimpl.cpp
txindex/simpletxindex/: txindeximpl.cpp
txindex/test/: test_txindeximpl.cpp
txplanner/: CMakeLists.txt  main.cpp
txplanner/include/: service.h
txplanner/service/: txserviceimpl.cpp
